--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
         "lodash.throttle": "4.1.1",
         "lozad": "1.16.0",
         "normalize.css": "8.0.1",
+        "swiper": "9.4.1",
         "ua-parser-js": "1.0.33"
     },
     "husky": {
